--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav> 
     </header>
-    <img class="hero"></img>
+    <figure class="hero"></figure>
     <main class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
