--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </p>
         </section>
     </main>
-    <article class="benefits">
+    <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -70,13 +70,13 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section>
-    </article>
+    </aside>
     <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
-</body>
+</body> 
 
 </html>
