--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon_Project_Module_1</title>
+    <!--fixed the title-->
+    <title>Horiseon</title>
 </head>
-
+<!--changed the divs to easier to read elements-->
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -72,6 +73,7 @@
         </section>
     </aside>
     <footer class="footer">
+        <!--added h4 to fix footer-->
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
